[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Player/Flappy-bird.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Bird.gd" type="Script" id=2]
[ext_resource path="res://src/box.png" type="Texture" id=3]
[ext_resource path="res://src/Player/Control.gd" type="Script" id=4]
[ext_resource path="res://src/FFFFORWA.TTF" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 13 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 14 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[node name="Bird" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="collison" type="Area2D" parent="." groups=[
"player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collison"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 192, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Button" type="MenuButton" parent="CanvasLayer/Control"]
margin_left = 144.0
margin_top = 320.0
margin_right = 240.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 3 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
modulate = Color( 0.345098, 0.239216, 0, 1 )
margin_left = 144.0
margin_top = 288.0
margin_right = 240.0
margin_bottom = 320.0
custom_fonts/normal_font = SubResource( 4 )
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Score"]
margin_left = 176.0
margin_top = 112.0
margin_right = 288.0
margin_bottom = 160.0
custom_fonts/normal_font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="collison" to="." method="_on_collison_area_entered"]
[connection signal="pressed" from="CanvasLayer/Control/Button" to="CanvasLayer/Control" method="_on_Button_pressed"]
